# saas-growth-analytics

./: .gitignore  .python-version  LICENSE  Makefile  README.md  pyproject.toml
data/sample/: dim_users_sample.csv  fact_events_sample.csv  fact_experiments_sample.csv  fact_subscriptions_sample.csv
docs/: Makefile  business_problem.rst  conf.py  data_dictionary.rst  executive_summary.rst  index.rst  metric_dictionary.rst
python/src/: analysis.py  generate_data.py  metrics.py  run_sql_models.py
sql/marts/: mart_cohort_retention.sql  mart_experiment_results.sql  mart_funnel.sql  mart_product_growth_daily.sql
sql/staging/: stg_events.sql  stg_experiments.sql  stg_subscriptions.sql  stg_users.sql
streamlit_app/: app.py
streamlit_app/pages/: 01_executive_summary.py  02_funnel.py  03_cohorts.py  04_experimentation.py
streamlit_app/utils/: data_loader.py
tests/: test_analysis.py  test_generate_data.py  test_metrics.py  test_sql_pipeline.py
