[project]
name = "saas-growth-analytics"
version = "0.1.0"
description = "SaaS Growth Intelligence Platform: activation, retention, churn, and experimentation analytics built on synthetic product data with SQL modeling, Python analysis, and an interactive Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Vijaya Supreetha Gurrala" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "faker>=26.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
streamlit = [
    "streamlit>=1.36",
    "plotly>=5.22",
]
docs = [
    "sphinx>=7.3",
    "furo>=2024.5",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
